Build the JavaScript client.

--- a/ExploreCalifornia/ExploreCalifornia/Pages/Shared/_Layout.cshtml
+++ b/ExploreCalifornia/ExploreCalifornia/Pages/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
         </div>
     </footer>
 
+    <script src="https://unpkg.com/@@microsoft/signalr@5.0.5/dist/browser/signalr.js" integrity="sha384-T/F8Kx5xJBQsay07/bwisNdw9lNDLiA4sDIFIE3/r08Zo7GeGIAz/EEHhdXByYGZ" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
+
     @RenderSection("Scripts", required: false)
 </body>
 </html>
