--- a/ExploreCalifornia/ExploreCalifornia/wwwroot/css/chat.css
+++ b/ExploreCalifornia/ExploreCalifornia/wwwroot/css/chat.css
@@ -65,3 +65,28 @@
 #bottomPanel #messageTextbox {
     width: 200px;
 }
+
+#chatConnectionInfo {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    height: 100%;
+    padding-top: 100px;
+    color: darkred;
+    z-index: 2;
+    display: none;
+}
+
+#chatDialog.disconnected #chatMainPanel {
+    filter: blur(2px);
+}
+
+#chatDialog.disconnected #chatConnectionInfo {
+    display: block;
+}
+
+#chatWelcomePanel {
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+}
